# RV

LABA_1/: .clang-format  .gitignore  CMakeLists.txt  Pointer.hpp  getPointers.cpp  kmeans.cpp  ЛАБА_1.docx  РВ1.docx
LABA_1/plot_gen/: final_plot.py  first_plot.py  pyproject.toml
LABA_2/: .gitignore  CMakeLists.txt  Pointer.hpp  getPointers.cpp  k_means_cpu.cpp  k_means_gpu.cu  pyproject.toml
LABA_2/plot_gen/: final_plot.py  first_plot.py  pyproject.toml
